objects/Benefit_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Benefit_Api_Name__c</fullName>
        <label>Benefit Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Datatype__c</fullName>
        <label>Benefit Datatype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Recordtype__c</fullName>
        <label>Benefit Recordtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Benefit Setting</label>
    <pluralLabel>Benefit Settings</pluralLabel>
</CustomObject>